trunk/Archive2/35/45f4d5ebc3b656/output
main.cpp: In function 'int main()':
main.cpp:79:16: error: '_Ph' is not a member of 'std'
     auto a = A<std::_Ph<1>&>::Create(&B::Increment, std::make_shared<B>(), std::placeholders::_1);
                ^
main.cpp:79:16: error: '_Ph' is not a member of 'std'
main.cpp:79:26: error: template argument 1 is invalid
     auto a = A<std::_Ph<1>&>::Create(&B::Increment, std::make_shared<B>(), std::placeholders::_1);
                          ^
main.cpp:79:28: error: expected primary-expression before '>' token
     auto a = A<std::_Ph<1>&>::Create(&B::Increment, std::make_shared<B>(), std::placeholders::_1);
                            ^
main.cpp:79:29: error: '::Create' has not been declared
     auto a = A<std::_Ph<1>&>::Create(&B::Increment, std::make_shared<B>(), std::placeholders::_1);
                             ^
